syntax = "proto3";
package pb_perf;

message UniformDistribution {
  int32 min = 1;
  int32 max = 2;
}

message Directory {
  // Filesystem directory path.
  string path = 1;

  // Total number of files to be generated in that directory.
  int32 totalNumberFiles = 2;

  // Nested directories inside that directory. Note that subDir paths will be
  // relative to the parent directory.
  repeated Directory subDir = 4;
}

message FileSystem {
  // The file system directory.
  Directory dir = 1;

  // The file sizes random distribution.
  oneof fileSizeDistribution {
    UniformDistribution uniformDistribution = 2;
  }

  // Max number of files and/or directories in filesystem directories. If the
  // total number of files/directories in a dir >= maxNodes, the tool will build
  // a directory tree to meet both number of files/directories and maxNodesInDir
  // constraints.
  int32 maxNodesInDir = 3;
}

message DataGeneratorConfig {
  oneof dataSource {
    FileSystem fileSystem = 1;
  }
}
